crates/figue/tests/integration/snapshots/main__integration__err__error_invalid_ip_address.snap
---
source: crates/figue/tests/integration/err.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: failed to parse "not-an-ip" as IpAddr at address
   ╭─[ <cli>:1:11 ]
   │
 1 │ --address not-an-ip
   │           ────┬────  
   │               ╰────── failed to parse "not-an-ip" as IpAddr at address
───╯
